# fossil-sdk-c

./: README.md  meson.build  meson.options
.github/ciimage/: Dockerfile.archlinux  Dockerfile.debian
.github/workflows/: meson_ci.yml
code/: meson.build
code/include/fossil/: algorithms.h  jellyfish.h  stdio.h  stdtool.h  string.h  structures.h  threads.h
code/include/fossil/ai/: deepsea.h  fishgpt.h  neural.h
code/include/fossil/algorithm/: dynamic.h  greedy.h  search.h  sort.h  summary.h
code/include/fossil/algorithms/: dynamic.h  greedy.h  search.h  sort.h  summary.h
code/include/fossil/common/: common.h  limits.h  status.h
code/include/fossil/core/: arguments.h  bitwise.h  bluecrab.h  command.h  datetime.h  filesystem.h  fossil.h  fson.h  hostsystem.h  memory.h  money.h  random.h  regex.h  smartptr.h
code/include/fossil/generic/: actionof.h  arrayof.h  iterator.h  mapof.h  tofu.h
code/include/fossil/io/: fstream.h  istream.h  ostream.h  soap.h
code/include/fossil/jellyfish/: anomaly.h  braincoral.h  deepsea.h  dolphin.h  fishgpt.h  jellyfish.h  neural.h
code/include/fossil/stdio/: fstream.h  istream.h  ostream.h  soap.h
code/include/fossil/stdtool/: arguments.h  bitwise.h  command.h  filesystem.h  hostsystem.h  memory.h  money.h  random.h  smartptr.h
code/include/fossil/string/: bstring.h  cipher.h  cstring.h  format.h  letter.h  manip.h  number.h  strfrom.h  strstream.h  strto.h  wstring.h
code/include/fossil/strings/: bstring.h  cipher.h  cstring.h  format.h  letter.h  manip.h  number.h  strfrom.h  strstream.h  strto.h  wstring.h
code/include/fossil/structure/: dlist.h  dqueue.h  flist.h  map.h  pqueue.h  queue.h  set.h  stack.h  tree.h  vector.h
code/include/fossil/structures/: dlist.h  dqueue.h  flist.h  map.h  pqueue.h  queue.h  set.h  stack.h  tree.h  vector.h
code/include/fossil/threads/: barrier.h  condition.h  mutexs.h  semaphores.h  spinlocks.h  task.h  thread.h  threadlocal.h  threadpool.h
code/include/fossil/tofu/: errors.h  limits.h
code/source/: anomaly.c  arguments.c  barrier.c  bitwise.c  bluecrab.c  braincoral.c  bstring.c  cipher.c  command.c  condition.c  cstring.c  datetime.c  deepsea.c  dlist.c  dolphin.c  dqueue.c  dynamic.c  filesystem.c  fishgpt.c  flist.c  format.c  fossil.c  fson.c  fstream.c  greedy.c  hostsystem.c  istream.c  jellyfish.c  letter.c  manip.c  map.c  memory.c  meson.build  money.c  mutexs.c  neural.c  number.c  ostream.c  pqueue.c  queue.c  (+21 more)
code/source/fossil/: meson.build
code/source/fossil/ai/: anomaly.c  braincoral.c  deepsea.c  dolphin.c  fishgpt.c  jellyfish.c  meson.build  neural.c
code/source/fossil/algorithm/: dynamic.c  greedy.c  meson.build  search.c  sort.c  summary.c
code/source/fossil/core/: arguments.c  bitwise.c  bluecrab.c  command.c  datetime.c  filesystem.c  fson.c  hostsystem.c  memory.c  meson.build  money.c  random.c  regex.c  smartptr.c
code/source/fossil/generic/: actionof.c  arrayof.c  iterator.c  mapof.c  meson.build  tofu.c
code/source/fossil/io/: fstream.c  istream.c  meson.build  ostream.c  soap.c
code/source/fossil/strings/: bstring.c  cipher.c  cstring.c  format.c  letter.c  manip.c  meson.build  number.c  strfrom.c  strstream.c  strto.c  wstring.c
code/source/fossil/structure/: dlist.c  dqueue.c  flist.c  map.c  meson.build  pqueue.c  queue.c  set.c  stack.c  tree.c  vector.c
code/source/fossil/threads/: barrier.c  condition.c  meson.build  mutexs.c  semaphores.c  threadpool.c
subprojects/: fossil-test-c.wrap  fossil-test.wrap
test/: generate-runner.py  meson.build  sample-data.fson  test_algorithm.c  test_core.c  test_generic.c  test_io.c  test_strings.c  test_structure.c  xtest_anomaly.c  xtest_arguments.c  xtest_barrier.c  xtest_bitwise.c  xtest_bluecrab.c  xtest_braincoral.c  xtest_bstring.c  xtest_cipher.c  xtest_command.c  xtest_condition.c  xtest_cstring.c  xtest_datetime.c  xtest_deepsea.c  xtest_dlist.c  xtest_dolphin.c  xtest_dqueue.c  xtest_dynamic.c  xtest_filesystem.c  xtest_fishgpt.c  xtest_flist.c  xtest_format.c  xtest_fossil.c  xtest_fson.c  xtest_fstream.c  xtest_greedy.c  xtest_hostsystem.c  xtest_istream.c  xtest_letter.c  xtest_manip.c  xtest_map.c  xtest_memory.c  (+30 more)
